# lpats

./: .travis.yml  CMakeLists.txt  README  README.md  demo.cc  gpats-config-version.cmake.in  gpats-config.cmake.in  gpats.cc  gpats.h  lpats-config-version.cmake.in  lpats-config.cmake.in  lpats.cc  lpats.h  lpats.pc.in  test.cc
